<resources>
    <string name="app_name">Crypto Compare</string>
    <string name="title_chart">Chart</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_settings">General Settings</string>
    <string name="manage_exchanges">Manage Exchanges</string>
    <string name="graph_type">Graph Type</string>
    <string name="rate_graph">Rate Graph</string>
    <string name="currency_graph">Currency Graph</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="alarm_tone">Alarm Tone</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="learn_more">Learn More</string>
    <string name="report_bug_feature">Report Bug or Request Feature</string>
    <string name="about">About</string>
    <string name="title_notifications">Notifications</string>
    <string name="share_app">Share App</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_graph_types">
        <item>@string/rate_graph</item>
        <item>@string/currency_graph</item>
    </string-array>
    <string-array name="list_graph_types_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="list_min_max_period">
        <item>@string/last_hour</item>
        <item>@string/last_day</item>
        <item>@string/last_week</item>
        <item>@string/last_month</item>
    </string-array>
    <string-array name="list_min_max_period_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings2">Settings2</string>
    <string name="dot_center">\u2022</string>
    <string name="buy">Buy</string>
    <string name="text_currency_symbol">currency symbol</string>
    <string name="text_no_notification">No Notification</string>
    <string name="no_notification_description">Tap the add new notification button below and Check Again.</string>
    <string name="text_add_new_notification">Add New Notification</string>
    <string name="title_add_notification_activity">Add Notification</string>
    <string name="menu_refresh">Refresh</string>
    <string name="text_bitcoin">Bitcoin</string>
    <string name="text_ethereum">Ethereum</string>
    <string name="no_internet_description">Hold on sailor, no internet, try refreshing or</string>
    <string name="text_open_settings">Open Settings</string>
    <string name="min_max_period">Min Max Period</string>
    <string name="last_hour">Last Hour</string>
    <string name="last_day">Last Day</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="text_sgd">SGD</string>
    <string name="text_usd">USD</string>
    <string name="text_inr">INR</string>
    <string name="text_eur">EUR</string>
    <string name="saved_file_name">saved_file_name</string>
    <string name="text_add_exchange">Add Exchange</string>
    <string name="no_selected_exchange_description">To add, click on the button Add Exchanges and under Manage Exchanges select coin and add an exchange.</string>

</resources>
