<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context="com.shapps.cryptocompare.SettingsFragment"
    tools:showIn="@layout/fragment_settings">

    <TextView
        style="@style/headingSettings"
        android:text="@string/general_settings"/>
    <TextView
        android:id="@+id/manageExchanges"
        style="@style/textSettings"
        android:text="@string/manage_exchanges"/>

    <LinearLayout
        android:id="@+id/graphType"
        style="@style/settingsLL">
        <TextView
            style="@style/textInLinearLayoutSettings"
            android:layout_weight="3"
            android:text="@string/graph_type"/>
        <TextView
            android:id="@+id/textGraphType"
            style="@style/textInLinearLayoutSettings"
            android:layout_weight="2"
            android:text="@string/currency_graph"/>
    </LinearLayout>

    <TextView
        style="@style/headingSettings"
        android:text="@string/notification_settings"/>
    <LinearLayout
        style="@style/settingsLL">
        <TextView
            style="@style/textInLinearLayoutSettings"
            android:layout_weight="4"
            android:text="@string/notification"/>
        <Switch
            android:id="@+id/notificationState"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/settingsLL">
        <TextView
            style="@style/textInLinearLayoutSettings"
            android:layout_weight="4"
            android:text="@string/alarm"/>
        <Switch
            android:id="@+id/alarmState"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/alarmTone"
        style="@style/settingsLL">
        <TextView
            style="@style/textInLinearLayoutSettings"
            android:layout_weight="3"
            android:text="@string/alarm_tone"/>

        <TextView
            android:id="@+id/textAlarmTone"
            style="@style/textInLinearLayoutSettings"
            android:layout_weight="2"
            android:text="Tythis"/>
    </LinearLayout>

    <TextView
        style="@style/headingSettings"
        android:text="@string/learn_more"/>
    <TextView
        android:id="@+id/about"
        style="@style/textSettings"
        android:text="@string/about"/>

    <TextView
        android:id="@+id/bugOrFeature"
        style="@style/textSettings"
        android:text="@string/report_bug_feature"/>


</LinearLayout>